force-app/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <description>Registry of trigger handler classes per SObject. Dispatchers query this at runtime — no code changes needed when adding a new handler.</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>