force-app/main/default/objects/Trigger_Handler__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>When unchecked, the dispatcher skips this handler without removing the record.</description>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>