force-app/main/default/objects/Trigger_Handler__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <description>API name of the SObject this handler applies to (e.g. Account, Contact).</description>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>