force-app/main/default/objects/Trigger_Handler__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <description>Execution order within an object. Lower numbers run first. Handlers without an order run last.</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>